[project]
name = "solving-combinatorial-problems-using-reinforcement-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.1.1",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "numpy>=2.2.5",
    "pytest>=8.3.5",
    "ray[tune]>=2.46.0",
    "wandb>=0.19.11",
]
